# vulnerable.so

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  package.json  rust-toolchain.toml
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  docs.yml  markdown-link-check-config.json  scheduled-audit.yml
docs/: PINOCCHIO.md
examples/01-missing-account-validation/: README.md  example1.fix.rs  example1.pinocchio.rs  example1.rs
examples/02-incorrect-authority-check/: README.md  example2.fix.rs  example2.pinocchio.rs  example2.rs
examples/03-unsafe-arithmetic/: README.md  example3.fix.rs  example3.pinocchio.rs  example3.rs
examples/04-cpi-reentrancy/: README.md  example4.fix.rs  example4.pinocchio.rs  example4.rs
examples/05-signer-privilege-escalation/: README.md  example5.fix.rs  example5.pinocchio.rs  example5.rs
programs/01a-missing-account-validation-vuln/: Cargo.toml
programs/01a-missing-account-validation-vuln/src/: lib.rs
programs/01b-missing-account-validation-fix/: Cargo.toml
programs/01b-missing-account-validation-fix/src/: lib.rs
programs/01c-missing-account-validation-attacker/: Cargo.toml
programs/01c-missing-account-validation-attacker/src/: lib.rs
programs/02a-incorrect-authority-vuln/: Cargo.toml
programs/02a-incorrect-authority-vuln/src/: lib.rs
programs/02b-incorrect-authority-fix/: Cargo.toml
programs/02b-incorrect-authority-fix/src/: lib.rs
programs/02c-incorrect-authority-attacker/: Cargo.toml
programs/02c-incorrect-authority-attacker/src/: lib.rs
programs/03a-unsafe-arithmetic-vuln/: Cargo.toml
programs/03a-unsafe-arithmetic-vuln/src/: lib.rs
programs/03b-unsafe-arithmetic-fix/: Cargo.toml
programs/03b-unsafe-arithmetic-fix/src/: lib.rs
programs/03c-unsafe-arithmetic-attacker/: Cargo.toml
programs/03c-unsafe-arithmetic-attacker/src/: lib.rs
programs/04a-cpi-reentrancy-vuln/: Cargo.toml
programs/04a-cpi-reentrancy-vuln/src/: lib.rs
programs/04b-cpi-reentrancy-fix/: Cargo.toml
programs/04b-cpi-reentrancy-fix/src/: lib.rs
programs/04c-cpi-reentrancy-attacker/: Cargo.toml
programs/04c-cpi-reentrancy-attacker/src/: lib.rs
programs/05a-signer-privilege-escalation-vuln/: Cargo.toml
programs/05a-signer-privilege-escalation-vuln/src/: lib.rs
programs/05b-signer-privilege-escalation-fix/: Cargo.toml
programs/05b-signer-privilege-escalation-fix/src/: lib.rs
programs/05c-signer-privilege-escalation-attacker/: Cargo.toml
programs/05c-signer-privilege-escalation-attacker/src/: lib.rs
scripts/attacks/: 01-missing-account-attack.ts  02-incorrect-authority-attack.ts  03-unsafe-arithmetic-attack.ts  04-cpi-reentrancy.ts  05-signer-privilege-attack.ts  README.md
