[workspace]
members = [
    "programs/01a-missing-account-validation-vuln",
    "programs/01b-missing-account-validation-fix",
    "programs/01c-missing-account-validation-attacker",
    "programs/02a-incorrect-authority-vuln",
    "programs/02b-incorrect-authority-fix",
    "programs/02c-incorrect-authority-attacker",
    "programs/03a-unsafe-arithmetic-vuln",
    "programs/03b-unsafe-arithmetic-fix",
    "programs/03c-unsafe-arithmetic-attacker",
    "programs/04a-cpi-reentrancy-vuln",
    "programs/04b-cpi-reentrancy-fix",
    "programs/04c-cpi-reentrancy-attacker",
    "programs/05a-signer-privilege-escalation-vuln",
    "programs/05b-signer-privilege-escalation-fix",
    "programs/05c-signer-privilege-escalation-attacker",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
pinocchio = "0.10.1"

[profile.release]
overflow-checks = true
