[package]
name = "unsafe-arithmetic-attacker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unsafe_arithmetic_attacker"

[dependencies]
anchor-lang = { workspace = true }
pinocchio = "0.10.1"

[features]
idl-build = ["anchor-lang/idl-build"]

[dev-dependencies]
unsafe-arithmetic-vuln = { path = "../03a-unsafe-arithmetic-vuln", features = ["no-entrypoint"] }
unsafe-arithmetic-fix = { path = "../03b-unsafe-arithmetic-fix", features = ["no-entrypoint"] }
anchor-lang = { workspace = true }